@@ -4,5 +4,6 @@ from diagrams import *
 from points import *
 from lines import *
 from blobs import *
-#from deco import *
+from deco import *
 #from utils import *
+from paint import *
